--- a/wh.html
+++ b/wh.html
@@ -10,7 +10,7 @@
 />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 <body>
     <header>
     <div class="main">
@@ -24,8 +24,9 @@
                     
                     <div class="sol">
                         Solutions
-                        <i class="ri-arrow-down-s-line"></i>
+                        <div class="arcont"><i class="ri-arrow-down-s-line"></i>
                         <i class="ri-arrow-up-s-line"></i>
+                    </div>
                     </div>
                 </div>
             </div>
