--- a/wh.html
+++ b/wh.html
@@ -28,6 +28,9 @@
                         <i class="ri-arrow-up-s-line"></i>
                     </div>
                     </div>
+                    <div class="capabilities">
+                        Capabilities
+                    </div>
                 </div>
             </div>
             <div class="menu">
