--- a/wh.html
+++ b/wh.html
@@ -30,6 +30,8 @@
                     </div>
                     <div class="capabilities">
                         Capabilities
+                        <div class="a2cont"><i class="ri-arrow-down-s-line"></i>
+                        <i class="ri-arrow-up-s-line"></i></div>
                     </div>
                 </div>
             </div>
