--- a/wh.html
+++ b/wh.html
@@ -33,6 +33,11 @@
                         <div class="a2cont"><i class="ri-arrow-down-s-line"></i>
                         <i class="ri-arrow-up-s-line"></i></div>
                     </div>
+                    <div class="indus">
+                        Industries
+                        <div class="a3cont"><i class="ri-arrow-down-s-line"></i>
+                        <i class="ri-arrow-up-s-line"></i></div>
+                    </div>
                 </div>
             </div>
             <div class="menu">
