--- a/wh.html
+++ b/wh.html
@@ -27,6 +27,17 @@
                         <div class="arcont"><i class="ri-arrow-down-s-line"></i>
                         <i class="ri-arrow-up-s-line"></i>
                     </div>
+                    <div class="sol-drop">
+                        <a href="#">Marketing Strategy</a>
+                        <a href="#">PPC and Retargeting</a>
+                        <a href="#">Social Media Marketing</a>
+                        <a href="#">Marketing Analytics</a>
+                        <a href="#">Website Management and Analytics</a>
+                        <a href="#">SEO Strategy and Web Maintenance</a>
+                        <a href="#">Data Acquisition and Cleansing</a>
+                        <a href="#">Marketing Automation</a>
+                        <a href="#">Content Marketing</a>
+                    </div>
                     </div>
                     <div class="capabilities">
                         Capabilities
