--- a/wh.html
+++ b/wh.html
@@ -28,7 +28,7 @@
                         <i class="ri-arrow-up-s-line"></i>
                     </div>
                     <div class="sol-drop">
-                        <a href="#">Marketing Strategy</a>
+                        <a class="sol1">Marketing Strategy</a>
                         <a href="#">PPC and Retargeting</a>
                         <a href="#">Social Media Marketing</a>
                         <a href="#">Marketing Analytics</a>
