--- a/wh.html
+++ b/wh.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="sol-drop">
                         <a class="sol1">Marketing Strategy</a>
-                        <a href="#">PPC and Retargeting</a>
+                        <a class="sol2">PPC and Retargeting</a>
                         <a href="#">Social Media Marketing</a>
                         <a href="#">Marketing Analytics</a>
                         <a href="#">Website Management and Analytics</a>
