--- a/wh.html
+++ b/wh.html
@@ -30,13 +30,13 @@
                     <div class="sol-drop">
                         <a class="sol1">Marketing Strategy</a>
                         <a class="sol2">PPC and Retargeting</a>
-                        <a href="#">Social Media Marketing</a>
-                        <a href="#">Marketing Analytics</a>
-                        <a href="#">Website Management and Analytics</a>
-                        <a href="#">SEO Strategy and Web Maintenance</a>
-                        <a href="#">Data Acquisition and Cleansing</a>
-                        <a href="#">Marketing Automation</a>
-                        <a href="#">Content Marketing</a>
+                        <a class="sol3">Social Media Marketing</a>
+                        <a class="sol4">Marketing Analytics</a>
+                        <a class="sol5">Website Management and Analytics</a>
+                        <a class="sol6">SEO Strategy and Web Maintenance</a>
+                        <a class="sol7">Data Acquisition and Cleansing</a>
+                        <a class="sol8">Marketing Automation</a>
+                        <a class="sol9">Content Marketing</a>
                     
                     </div>
                     </div>
